<resources>
    <string name="app_name">TurisAPP</string>

    <!-- Registrarse labels-->
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="bienvenida_registrarse">Registro de turistas, por favor ingresar los siguientes datos</string>
    <string name="user">Usuario</string>
    <string name="correo_registro">Correo electrónico</string>
    <string name="pass_registro">Contraseña</string>
    <string name="title_activity_user_register">UserRegister</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="close_account">Cerrar sesión</string>

    <!-- Detalle Sitio turistico -->
    <string name="bienvenida_dtlleRegistro">Detalle Sitio Turistico</string>
    <string name="temperatura">Temperatura:</string>
    <string name="sitios_recomendados">Sitios Recomendados</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="informacion_general">Información General:</string>
    <string name="nombre">Nombre:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>