<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D17D00"
    tools:context=".detalleSitioTuristico">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:text="@string/bienvenida_dtlleRegistro"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtField_nombreDtlle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txt_bienvenida"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nombreDtlle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="@color/black"
            android:hint="@string/nombre"
            android:textSize="14dp"
            android:backgroundTint="#20D6DD"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtField_infoGen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtField_nombreDtlle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/infoGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/informacion_general"
            android:textSize="14sp"
            android:backgroundTint="#20D6DD"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtField_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txtField_infoGen"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/ubicacion"
            android:backgroundTint="#20D6DD"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtField_temperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txtField_ubicacion"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/temperatura"
            android:textSize="14sp"
            android:backgroundTint="#20D6DD"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtField_sitiosRecomendados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txtField_temperatura"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_SitiosRecomendados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/sitios_recomendados"
            android:textSize="14sp"
            android:backgroundTint="#20D6DD"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_subir_archivo"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/txtField_sitiosRecomendados"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:drawableStart="@drawable/ic_file_upload_white"
        android:text=" Subir archivo"
        android:background="@drawable/button_rounded"
        android:textColor="@color/black"
        android:textColorLink="#FFFFFF"/>

    <ImageButton
        android:id="@+id/imageBtn_registrar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_subir_archivo"
        android:layout_marginStart="130dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FBFDFD"
        app:srcCompat="@drawable/ic_icons8_comprobado" />

    <ImageButton
        android:id="@+id/imageBtn_no_registrar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_subir_archivo"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/imageBtn_registrar"
        android:backgroundTint="#FBFDFD"
        app:srcCompat="@drawable/ic_icons8_cancelar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/onda"
        android:layout_below="@+id/imageBtn_no_registrar"
        android:layout_marginTop="55dp"/>


</RelativeLayout>

